<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
   <item
      android:id="@+id/color"
      android:title="@string/menuitem_color"
      android:icon="@drawable/ic_palette_24dp"
      app:showAsAction="ifRoom">
   </item>

   <item
      android:id="@+id/line_width"
      android:title="@string/menuitem_line_width"
      android:icon="@drawable/ic_brush_24dp"
      app:showAsAction="ifRoom">
   </item>

   <item
       android:id="@+id/shape"
       android:title="@string/menuitem_shape"
       android:icon="@drawable/ic_gesture_24dp"
       app:showAsAction="ifRoom">

      <menu xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto">
         <item
             android:id="@+id/curves"
             android:title="@string/menuitem_lines"
             android:icon="@drawable/ic_gesture_24dp"
             app:showAsAction="ifRoom">
         </item>

         <item
             android:id="@+id/rectangle"
             android:title="@string/menuitem_rectangle"
             android:icon="@drawable/ic_rectangle_24dp"
             app:showAsAction="ifRoom">
         </item>

         <item
             android:id="@+id/oval"
             android:title="@string/menuitem_oval"
             android:icon="@drawable/ic_oval_24dp"
             app:showAsAction="ifRoom">
         </item>
      </menu>
   </item>

   <item
       android:id="@+id/default_background"
       android:title="@string/menuitem_default_background"
       android:icon="@drawable/ic_dft_bgd_24dp"
       app:showAsAction="ifRoom">
   </item>

   <item
       android:id="@+id/background"
       android:title="@string/menuitem_background"
       android:icon="@drawable/ic_bgd_color_24dp"
       app:showAsAction="ifRoom">
   </item>

   <item
      android:id="@+id/delete_drawing"
      android:title="@string/menuitem_delete"
      android:icon="@drawable/ic_delete_24dp"
      app:showAsAction="ifRoom">
   </item>

   <item
      android:id="@+id/save"
      android:title="@string/menuitem_save"
      android:icon="@drawable/ic_save_24dp"
      app:showAsAction="ifRoom">
   </item>

   <item
      android:id="@+id/print"
      android:title="@string/menuitem_print"
      android:icon="@drawable/ic_print_24dp"
      app:showAsAction="ifRoom">
   </item>
</menu>